force-app/main/default/objects/Transaction__c/fields/Value_E_wallet_after_transaction_created__c.field-meta.xml
<CustomField>
    <fullName>Value_E_wallet_after_transaction_created__c</fullName>
    <description>Value of the e-wallet after the transaction has been created udapted by a worklow rules when transaction is created</description>
    <inlineHelpText>Value of the e-wallet after the transaction has been created</inlineHelpText>
    <label>Value E-wallet after transaction created</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>