force-app/main/default/objects/Transaction__c/fields/verified__c.field-meta.xml
<CustomField>
    <fullName>verified__c</fullName>
    <label>verified</label>
    <type>DateTime</type>
</CustomField>