force-app/main/default/objects/Transaction__c/fields/Withdrawal_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Deposit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Withdrawal Deposit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Withdrawal_Deposit__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Withdrawal_Deposit__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>