force-app/main/default/objects/Transaction__c/fields/Withdrawal_Deposit_exist__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Deposit_exist__c</fullName>
    <formula>IF ( ISBLANK(  Withdrawal_Deposit__c )= TRUE, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withdrawal Deposit exist</label>
    <type>Checkbox</type>
</CustomField>