force-app/main/default/objects/Transaction__c/fields/Withdrawal_Deposit_Unique_Index__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Deposit_Unique_Index__c</fullName>
    <externalId>true</externalId>
    <label>Withdrawal Deposit Unique Index</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>