force-app/main/default/objects/Transaction__c/recordTypes/Closed_Period.recordType-meta.xml
<RecordType>
    <fullName>Closed_Period</fullName>
    <active>true</active>
    <label>Closed Period</label>
</RecordType>