force-app/main/default/objects/Transaction__c/recordTypes/Open_Period.recordType-meta.xml
<RecordType>
    <fullName>Open_Period</fullName>
    <active>true</active>
    <label>Open Period</label>
</RecordType>