force-app/main/default/objects/Transaction__c/validationRules/Flag_only_tick_for_deposit.validationRule-meta.xml
<ValidationRule>
    <fullName>Flag_only_tick_for_deposit</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Ready_for_email__c,NOT(ISPICKVAL( Type__c ,&apos;70.Deposit&apos;)))</errorConditionFormula>
    <errorMessage>The checkbox &quot;Ready for Email&quot; is only for Deposit type</errorMessage>
</ValidationRule>