force-app/main/default/objects/Transaction__c/validationRules/Tranche_Amount_Only_For_FxContract.validationRule-meta.xml
<ValidationRule>
    <fullName>Tranche_Amount_Only_For_FxContract</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND( FX_Contract__c == null, Tranche_amount__c == null),  AND(FX_Contract__c != null, Tranche_amount__c != null)
)</errorConditionFormula>
    <errorDisplayField>Tranche_amount__c</errorDisplayField>
    <errorMessage>Tranche amount is null the same as Fx Contract</errorMessage>
</ValidationRule>