force-app/main/default/objects/Transaction__c/listViews/All_temp.listView-meta.xml
<ListView>
    <fullName>All_temp</fullName>
    <columns>NAME</columns>
    <columns>transaction_ID__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Type__c</columns>
    <columns>CCY__c</columns>
    <columns>Amount__c</columns>
    <columns>Account__c</columns>
    <columns>eWallet_Trustee__c</columns>
    <columns>Trustee__c</columns>
    <columns>notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - temp</label>
</ListView>