force-app/main/default/objects/Transaction__c/listViews/commisions.listView-meta.xml
<ListView>
    <fullName>commisions</fullName>
    <columns>Effective_Date__c</columns>
    <columns>transaction_ID__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice_Finance_Deal__c</columns>
    <columns>Invoice_Financing_Deal_name__c</columns>
    <columns>Type__c</columns>
    <columns>CCY__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>DebitCredit__c</columns>
    <columns>notes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>Commission</value>
    </filters>
    <label>commisions</label>
</ListView>