force-app/main/default/objects/Transaction__c/listViews/deposits_and_withdrawals_fundersSGD.listView-meta.xml
<ListView>
    <fullName>deposits_and_withdrawals_fundersSGD</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>CCY__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>notes__c</columns>
    <columns>Status__c</columns>
    <columns>Trustee_Approved__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>80.Withdrawal,70.Deposit</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>account_type__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Account_Sub_Type__c</field>
        <operation>equals</operation>
        <value>Purchaser</value>
    </filters>
    <filters>
        <field>CCY__c</field>
        <operation>equals</operation>
        <value>SGD</value>
    </filters>
    <label>deposits and withdrawals - funders SGD</label>
</ListView>