force-app/main/default/objects/Transaction__c/listViews/deposits_and_withdrawals_today.listView-meta.xml
<ListView>
    <fullName>deposits_and_withdrawals_today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>CCY__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>notes__c</columns>
    <columns>Status__c</columns>
    <columns>Trustee_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>80.Withdrawal,70.Deposit</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>deposits and withdrawals - today</label>
</ListView>