force-app/main/default/objects/Transaction__c/listViews/e_wallet_trustee_empty.listView-meta.xml
<ListView>
    <fullName>e_wallet_trustee_empty</fullName>
    <columns>NAME</columns>
    <columns>eWallet_Trustee__c</columns>
    <columns>eWallet_Trustee_TXT__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eWallet_Trustee__c</field>
        <operation>equals</operation>
    </filters>
    <label>trustee empty</label>
</ListView>