force-app/main/default/objects/Transaction__c/listViews/laurence_transactions.listView-meta.xml
<ListView>
    <fullName>laurence_transactions</fullName>
    <columns>Effective_Date__c</columns>
    <columns>transaction_ID__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice_Finance_Deal__c</columns>
    <columns>Invoice_Financing_Deal_name__c</columns>
    <columns>Type__c</columns>
    <columns>CCY__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>DebitCredit__c</columns>
    <columns>notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>laurence</value>
    </filters>
    <filters>
        <field>Invoice_Financing_Deal_name__c</field>
        <operation>contains</operation>
        <value>1016</value>
    </filters>
    <label>laurence transactions</label>
</ListView>