force-app/main/default/objects/Transaction__c/listViews/SPECIGIC_E_WALLET.listView-meta.xml
<ListView>
    <fullName>SPECIGIC_E_WALLET</fullName>
    <columns>NAME</columns>
    <columns>eWallet_Trustee__c</columns>
    <columns>eWallet__c</columns>
    <columns>CCY__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eWallet__c</field>
        <operation>equals</operation>
        <value>000176</value>
    </filters>
    <filters>
        <field>eWallet_Trustee__c</field>
        <operation>notContain</operation>
        <value>1818</value>
    </filters>
    <label>=SPECIGIC E-WALLET</label>
</ListView>