force-app/main/default/objects/Transaction__c/listViews/trustee_not_approved.listView-meta.xml
<ListView>
    <fullName>trustee_not_approved</fullName>
    <columns>NAME</columns>
    <columns>External_Reference_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>CCY__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>notes__c</columns>
    <columns>Status__c</columns>
    <columns>Trustee_Approved__c</columns>
    <columns>Withdrawal_Deposit_Unique_Index__c</columns>
    <columns>Withdrawal_Deposit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>80.Withdrawal</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Trustee_Approved__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CCY__c</field>
        <operation>notEqual</operation>
        <value>XXX</value>
    </filters>
    <label>trustee not approved</label>
</ListView>