force-app/main/default/objects/Transaction__c/listViews/trustee_not_confirmed.listView-meta.xml
<ListView>
    <fullName>trustee_not_confirmed</fullName>
    <columns>Effective_Date__c</columns>
    <columns>transaction_ID__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice_Finance_Deal__c</columns>
    <columns>Invoice_Financing_Deal_name__c</columns>
    <columns>Type__c</columns>
    <columns>CCY__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>DebitCredit__c</columns>
    <columns>notes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Trustee_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trustee_Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>trustee not confirmed</label>
</ListView>